unpackaged/main/default/objects/bt_base__Schedule_Execution_Log__c/fields/bt_base__Action_Type__c.field-meta.xml
<CustomField>
    <fullName>bt_base__Action_Type__c</fullName>
    <label>Action Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>