unpackaged/main/default/objects/bt_base__Schedule_Execution_Log__c/fields/bt_base__Email_Phone__c.field-meta.xml
<CustomField>
    <fullName>bt_base__Email_Phone__c</fullName>
    <label>Email/Phone</label>
    <length>255</length>
    <type>Text</type>
</CustomField>