unpackaged/main/default/objects/bt_base__Schedule_Execution_Log__c/fields/bt_base__Execution_Datetime__c.field-meta.xml
<CustomField>
    <fullName>bt_base__Execution_Datetime__c</fullName>
    <label>Execution Datetime</label>
    <type>DateTime</type>
</CustomField>