unpackaged/main/default/objects/bt_base__Schedule_Execution_Log__c/fields/bt_base__Processed_At__c.field-meta.xml
<CustomField>
    <fullName>bt_base__Processed_At__c</fullName>
    <label>Processed At</label>
    <type>DateTime</type>
</CustomField>