unpackaged/main/default/objects/bt_base__Schedule_Execution_Log__c/fields/bt_base__Referenced_Record__c.field-meta.xml
<CustomField>
    <fullName>bt_base__Referenced_Record__c</fullName>
    <formula>IF( ISBLANK( bt_base__Referenced_Record_Id__c ), &#39;&#39;, HYPERLINK(&#39;/&#39; + bt_base__Referenced_Record_Id__c, &#39;View Referenced Record&#39;, &#39;_blank&#39;))</formula>
    <label>Referenced Record</label>
    <type>Text</type>
</CustomField>