unpackaged/main/default/objects/bt_base__Schedule_Execution_Log__c/fields/bt_base__Related_Record__c.field-meta.xml
<CustomField>
    <fullName>bt_base__Related_Record__c</fullName>
    <formula>IF( ISBLANK( bt_base__Related_Record_Id__c ), &#39;&#39;, HYPERLINK(&#39;/&#39; + bt_base__Related_Record_Id__c, &#39;View Related Record&#39;, &#39;_blank&#39;))</formula>
    <label>Related Record</label>
    <type>Text</type>
</CustomField>