unpackaged/main/default/objects/bt_base__Schedule_Execution_Log__c/fields/bt_base__Related_Record_Id__c.field-meta.xml
<CustomField>
    <fullName>bt_base__Related_Record_Id__c</fullName>
    <label>Related Record Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>