unpackaged/main/default/objects/bt_base__Schedule_Execution_Log__c/fields/bt_base__Schedule_Action__c.field-meta.xml
<CustomField>
    <fullName>bt_base__Schedule_Action__c</fullName>
    <label>Schedule Action</label>
    <referenceTo>bt_base__SCH_Schedule_Action__c</referenceTo>
    <relationshipLabel>Schedule Execution Logs</relationshipLabel>
    <relationshipName>Schedule_Execution_Logs</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>