unpackaged/main/default/objects/bt_base__Schedule_Execution_Log__c/fields/bt_base__Schedule_Execution__c.field-meta.xml
<CustomField>
    <fullName>bt_base__Schedule_Execution__c</fullName>
    <label>Schedule Execution</label>
    <referenceTo>bt_base__Schedule_Execution__c</referenceTo>
    <relationshipLabel>Schedule Execution Logs</relationshipLabel>
    <relationshipName>Schedule_Execution_Logs</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>