unpackaged/main/default/objects/bt_base__Schedule_Execution_Log__c/fields/bt_base__SMS_CRM_Id__c.field-meta.xml
<CustomField>
    <fullName>bt_base__SMS_CRM_Id__c</fullName>
    <label>SMS CRM Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>