unpackaged/main/default/objects/bt_base__Schedule_Execution_Log__c/fields/bt_base__Status_Description__c.field-meta.xml
<CustomField>
    <fullName>bt_base__Status_Description__c</fullName>
    <label>Status Description</label>
    <type>TextArea</type>
</CustomField>