unpackaged/main/default/objects/bt_base__Schedule_Execution_Log__c/listViews/bt_base__All.listView-meta.xml
<ListView>
    <fullName>bt_base__All</fullName>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>